# ratatui-xterm-js

./: .gitignore  Cargo.toml  README.md
examples/inline/: Cargo.toml  package-lock.json
examples/inline/src/: lib.rs  main.rs
examples/inline/www/: bootstrap.js  index.html  package-lock.json  package.json  webpack.config.js
examples/inline/www/static/: index.html
examples/simple/: Cargo.toml  package-lock.json  package.json
examples/simple/src/: lib.rs  main.rs
examples/simple/www/: index.js  package-lock.json  package.json  webpack.config.js
src/: backend.rs  event.rs  js_terminal.rs  lib.rs  parse.rs
