[package]
name = "ratatui-xterm-js"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "./examples/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ratatui = "0.29"
tokio = { version = "1.32.0", default-features = false, features = ["sync"] }
crossterm = "0.28.1"
futures = "0.3.28"
terminput = { git = "https://github.com/aschey/terminput", rev = "0eeca408b9eadf5dca616a8473454488877ecf3e", features = [
    "crossterm",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
xterm-js-rs = { git = "https://github.com/aschey/xterm-js-rs", rev = "d97c6ab43c012068514413261024e782ea866fae", features = [
    "xterm-addon-fit",
] }

[patch.crates-io]
crossterm = { git = "https://github.com/aschey/crossterm", rev = "458cf53294741ad7d0f4a28110ef8bf5e96c5155" }
