[package]
name = "ratatui-xterm-js"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "./examples/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ratatui = "0.29"
tokio = { version = "1.32.0", default-features = false, features = ["sync"] }
crossterm = "0.28.1"
futures = "0.3.28"
terminput = { version = "0.2.0", features = ["crossterm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
xterm-js-rs = { git = "https://github.com/aschey/xterm-js-rs", rev = "d97c6ab43c012068514413261024e782ea866fae", features = [
  "xterm-addon-fit",
] }

[features]
scrolling-regions = ["ratatui/scrolling-regions"]

[patch.crates-io]
crossterm = { git = "https://github.com/aschey/crossterm", rev = "3b6db3586eda31a803a67af7bdb1d0937cf26485" }
